Touch adjustment snaps to wrong target at a plugin boundary. https://bugs.webkit.org/show_bug.cgi?id=99938

Patch by Kevin Ellis <kevers@chromium.org> on 2012-10-25
Reviewed by Antonio Gomes.

Source/WebCore:

Inidcate that an <embed> element can respond to
mouse click events, since mouse events are forwarded
to the plugin.  Fixes touch adjustment at a plugin
boundary.  Prior to the patch a clickable element
adjacent to the plugin would capture synthetic mouse
events from tap gestures that spanned the plugin
boundary.

Test: touchadjustment/plugin.html

* html/HTMLEmbedElement.cpp:
(WebCore::HTMLEmbedElement::willRespondToMouseClickEvents):
(WebCore):
* html/HTMLEmbedElement.h:

LayoutTests:

Test for touch adjustment at a plugin boundary.
Prior to the patch, plugins were not considered
candidates for touch adjustment.

* touchadjustment/plugin-expected.txt: Added.
* touchadjustment/plugin.html: Added.

Canonical link: https://commits.webkit.org/118423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132509 268f45cc-cd09-0410-ab3c-d52691b4dbfc